--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,25 +2,31 @@ $redorange:rgb(226, 94, 32);
 body{
     // font-family: 'Luckiest Guy', cursive;
 font-family: 'Press Start 2P', cursive;
-background-color:rgb(221, 172, 109);
+background-image: url("../images/back3.gif");
+background-color:rgb(138, 221, 173);
+background-size: cover;
+
 }
 
 h1{
+    margin-top: 17.6vh;
+    margin-bottom: 2.6em;
     text-align: center;
-    color:white;
-    text-shadow:2px 2px $redorange;
+    color:$redorange;
+    margin-left: 1.2em;
+    text-shadow:2px 2px white;
     &:hover{
-        color:$redorange;
-        text-shadow:2px 2px white;
+        color:white;
+        text-shadow:2px 2px $redorange;
     }
 }
 .imgFlex{
-    margin-top: 25vh;
+
     display: flex;
     justify-content:space-evenly;
    
 }
 .cardStyle{
-    border: 2px solid white;
-    padding:4em 2em 3em;
+    border-radius: 7px;
+  
 }
