--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@ $redorange:rgb(226, 94, 32);
 body{
     // font-family: 'Luckiest Guy', cursive;
 font-family: 'Press Start 2P', cursive;
-background-image: url("../images/back3.gif");
+background-image: url("../images/back5.webp");
 background-color:rgb(138, 221, 173);
 background-size: cover;
 
@@ -13,7 +13,7 @@ h1{
     margin-bottom: 2.6em;
     text-align: center;
     color:$redorange;
-    margin-left: 1.2em;
+    margin-left: 1em;
     text-shadow:2px 2px white;
     &:hover{
         color:white;
