Moved around files to make more sense in the folder structure

--- a/sass/partials/_card.scss
+++ b/sass/partials/_card.scss
@@ -1,8 +1,8 @@
 body {
   font-family: 'Press Start 2P', cursive;
 }
-
 h1 {
   text-align: center;
 }
-/*# sourceMappingURL=card.css.map */
+img {
+}
