--- a/sass/partials/_card.scss
+++ b/sass/partials/_card.scss
@@ -1,8 +1,40 @@
-body {
-  font-family: 'Press Start 2P', cursive;
+.cardStyle {
+  border-radius: 7px;
+  background-color: white;
 }
-h1 {
+
+
+.card {
+  width: 300px;
+  height: auto;
+  perspective: 1000px;
+}
+
+.innerCard {
+  position: relative;
+  width: 100%;
+  height: 100%;
   text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
 }
-img {
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.card:hover .innerCard {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* Style the back side */
+.back {
+  transform: rotateY(180deg);
 }
