--- a/css/page.css
+++ b/css/page.css
@@ -17,8 +17,6 @@ a:hover {
 #cardStats {
   background: linear-gradient(150deg, #e9bf63 0%, #f2963d 64%, #e7621c 100%);
   width: 35vw;
-  height: -webkit-min-content;
-  height: -moz-min-content;
   height: min-content;
   padding: 1em;
   margin-left: 33%;
@@ -26,11 +24,13 @@ a:hover {
   border: 10px solid #f0df64;
   border-radius: 1em;
   font-size: .6em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 #cardStats img {
   border-radius: .7em;
-  margin-left: 2.9em;
   padding: 1em;
   background-color: skyblue;
   width: 20em;
@@ -41,7 +41,6 @@ a:hover {
 
 #cardStats h1 {
   font-size: 3em;
-  padding-left: 18.4%;
   color: white;
   text-shadow: 2px 2px #e25e20;
 }
@@ -52,7 +51,6 @@ a:hover {
 }
 
 h2 {
-  margin-left: 2em;
   color: black;
   text-shadow: 2px 2px white;
 }
@@ -63,16 +61,11 @@ h2:hover {
 }
 
 section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 95%;
   border: 2px solid #e25e20;
   padding: 1em;
   background-color: white;
