--- a/css/page.css
+++ b/css/page.css
@@ -16,7 +16,9 @@ a:hover {
 
 #cardStats {
   background: linear-gradient(150deg, #e9bf63 0%, #f2963d 64%, #e7621c 100%);
-  width: 35vw;
+  width: 31vw;
+  height: -webkit-min-content;
+  height: -moz-min-content;
   height: min-content;
   padding: 1em;
   margin-left: 33%;
@@ -24,16 +26,23 @@ a:hover {
   border: 10px solid #f0df64;
   border-radius: 1em;
   font-size: .6em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #cardStats img {
   border-radius: .7em;
   padding: 1em;
   background-color: skyblue;
-  width: 20em;
+  width: 16em;
   padding-left: 10em;
   padding-right: 10em;
   border: 4px solid white;
@@ -61,15 +70,26 @@ h2:hover {
 }
 
 section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 95%;
   border: 2px solid #e25e20;
   padding: 1em;
   background-color: white;
   font-size: 1em;
   border-radius: .7em;
+}
+
+.char {
+  letter-spacing: 2px;
+  padding: 4.5px;
 }
 /*# sourceMappingURL=page.css.map */
