--- a/sass/page.scss
+++ b/sass/page.scss
@@ -16,14 +16,14 @@ a{
 }
 #cardStats{
     background: linear-gradient(150deg, rgba(233,191,99,1) 0%, rgba(242,150,61,1) 64%, rgba(231,98,28,1) 100%);
-    width:31vw;
+    width: 34.6vw;
     height: min-content;
     padding: 1em;
-    margin-left: 33%;
+    margin-left: auto;
     margin-right: auto;
     border: 10px solid rgb(240, 223, 100);
     border-radius: 1em;
-    font-size: .6em;
+    font-size: .7em;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -70,9 +70,19 @@ section{
   background-color: white;
   font-size: 1em;
   border-radius: .7em;
+ 
 }
     
 .char{
 letter-spacing: 2px;
 padding: 4.5px;
+}
+
+span{
+  font-weight: 600;
+  color: rgb(33, 96, 179);
+}
+
+.charSpan{
+  color:rgb(32, 92, 32);
 }
